--- a/playground/index.html
+++ b/playground/index.html
@@ -216,10 +216,7 @@
 
               <select id="php-version-switcher" class="form-select form-select-sm" style="width: auto;"
                 title="Select PHP version">
-                <option value="8.4.8">PHP 8.4.8</option>
-                <option value="8.4.7">PHP 8.4.7</option>
-                <option value="8.4.3">PHP 8.4.3</option>
-                <option value="8.4.0">PHP 8.4.0</option>
+                <!-- Options are dynamically loaded -->
               </select>
 
               <select id="editor-switcher" class="form-select form-select-sm" style="width: auto;"
