--- a/playground/index.html
+++ b/playground/index.html
@@ -23,27 +23,9 @@
     content="PHP-WASM Playground is a simple in-browser editor for PHP using WebAssembly." />
   <!--<meta name=”twitter:image” content="https://.../logo.png" />-->
   <link rel="shortcut icon" href="assets/favicon.ico" />
-  <!-- Style -->
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.7/css/bootstrap.min.css"
-    integrity="sha512-fw7f+TcMjTb7bpbLJZlP8g2Y4XcCyFZW8uy8HsRZsH/SwbMw0plKHFHr99DN3l04VsYNwvzicUX/6qurvIxbxw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Bootstrap Icons -->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
-    integrity="sha512-t7Few9xlddEmgd3oKZQahkNI4dS6l80+eGEzFQiqtyVYdvcSG2D3Iub77R20BdotfRPA9caaRkg1tyaJiPmO0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- CodeMirror Style with Monokai Theme -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css"
-    integrity="sha512-uf06llspW44/LZpHzHT6qBOIVODjWtv4MxCricRxkzvopAlSWnTf6hpZTFxuuZcuNE9CBQhqE0Seu1CoRk84nQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/monokai.min.css"
-    integrity="sha512-R6PH4vSzF2Yxjdvb2p2FA06yWul+U0PDDav4b/od/oXf9Iw37zl10plvwOXelrjV2Ai7Eo3vyHeyFUjhXdBCVQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body style="background-color: var(--bs-gray-800); color: var(--bs-white);">
+<body>
   <!-- NoScript Warning -->
   <noscript>
     <div class="alert alert-danger text-center" role="alert">
@@ -338,16 +320,36 @@ echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
     </div> <!-- /#editor-container -->
 
     <!-- Footer -->
-    <footer class="text-center text-white-50 py-3">
+    <footer class="text-center text-white py-3">
       <div>
         <div id="app-version">PHP-WASM Playground v0.3.0</div>
         <a class="text-white-50" href="https://github.com/jakoch/php-wasm-devbox/">jakoch/php-wasm-devbox</a><br>
         Copyright (c) 2025 Jens A. Koch
       </div>
+      <a class="text-white-50" href="https://pagespeed.web.dev/analysis?url=https%3A%2F%2Fjakoch.github.io%2Fphp-wasm-devbox%2Findex.html"
+        target="_blank" rel="noopener noreferrer">Test PageSpeed</a>
     </footer>
 
   </div> <!-- /#main-container -->
 
+  <!-- Style -->
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.7/css/bootstrap.min.css"
+    integrity="sha512-fw7f+TcMjTb7bpbLJZlP8g2Y4XcCyFZW8uy8HsRZsH/SwbMw0plKHFHr99DN3l04VsYNwvzicUX/6qurvIxbxw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
+    integrity="sha512-t7Few9xlddEmgd3oKZQahkNI4dS6l80+eGEzFQiqtyVYdvcSG2D3Iub77R20BdotfRPA9caaRkg1tyaJiPmO0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- CodeMirror Style with Monokai Theme -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css"
+    integrity="sha512-uf06llspW44/LZpHzHT6qBOIVODjWtv4MxCricRxkzvopAlSWnTf6hpZTFxuuZcuNE9CBQhqE0Seu1CoRk84nQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/monokai.min.css"
+    integrity="sha512-R6PH4vSzF2Yxjdvb2p2FA06yWul+U0PDDav4b/od/oXf9Iw37zl10plvwOXelrjV2Ai7Eo3vyHeyFUjhXdBCVQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- CodeMirror Editor & Mode -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js"
     integrity="sha512-8RnEqURPUc5aqFEN04aQEiPlSAdE0jlFS/9iGgUyNtwFnSKCXhmB6ZTNl7LnDtDWKabJIASzXrzD0K+LYexU9g=="
