--- a/playground/index.html
+++ b/playground/index.html
@@ -25,7 +25,7 @@
   <link rel="shortcut icon" href="assets/favicon.ico" />
 </head>
 
-<body>
+<body id="bootstrap-body-override">
   <!-- NoScript Warning -->
   <noscript>
     <div class="alert alert-danger text-center" role="alert">
