convert workflow steps into bash scripts for generating app-version and php-versions list, alter worklfow accordingly, add to serve.sh for local use

--- a/playground/index.html
+++ b/playground/index.html
@@ -198,12 +198,13 @@
               <select id="php-version-switcher" class="form-select form-select-sm" style="width: auto;"
                 title="Select PHP version">
                 <!-- Placeholder option to avoid layout shift -->
-                <option value="" disabled selected>Select Version</option>
+                <option value="" disabled selected>Select PHP Version</option>
                 <!-- Options are dynamically loaded -->
               </select>
 
               <select id="editor-switcher" class="form-select form-select-sm" style="width: auto;"
                 title="Select editor type">
+                <option value="" disabled selected>Select Editor</option>
                 <option value="monaco">Monaco</option>
                 <option value="codemirror">CodeMirror</option>
               </select>
