select monaco editor by default [skip ci]

--- a/playground/index.html
+++ b/playground/index.html
@@ -204,8 +204,8 @@
 
               <select id="editor-switcher" class="form-select form-select-sm" style="width: auto;"
                 title="Select editor type">
-                <option value="" disabled selected>Select Editor</option>
-                <option value="monaco">Monaco</option>
+                <option value="" disabled>Select Editor</option>
+                <option value="monaco" selected>Monaco</option>
                 <option value="codemirror">CodeMirror</option>
               </select>
             </div> <!-- /d-flex -->
