display the "auto run" interval and flash the run button on execution

--- a/playground/index.html
+++ b/playground/index.html
@@ -193,6 +193,7 @@
               <div class="form-check form-switch text-white d-flex align-items-center">
                 <input class="form-check-input bg-secondary" type="checkbox" id="auto-run" title="Toggle Automatic Run">
                 <label class="form-check-label ps-1" for="auto-run">Auto Run</label>
+                <span id="auto-run-interval" class="ms-3 small text-info" style="min-width: 90px;">Interval: 3s</span>
               </div>
 
               <select id="php-version-switcher" class="form-select form-select-sm" style="width: auto;"
