fix validator links for css, html and pagespeed, removed invalid css directive

--- a/playground/index.html
+++ b/playground/index.html
@@ -386,10 +386,12 @@ echo 'Loaded Modules: ' . "\n - " . implode("\n - ", get_loaded_extensions()) . 
           <span>© 2025 Jens A. Koch</span>
         </div>
         <div class="mt-1">
-          <a class="text-info mx-2" href="https://pagespeed.web.dev/..." target="_blank" rel="noopener noreferrer">Test
-            PageSpeed</a>
-          <a class="text-info mx-2" href="https://jigsaw.w3.org/css-validator/..." target="_blank"
-            rel="noopener noreferrer">Test CSS</a>
+          <a class="text-info mx-2" href="https://pagespeed.web.dev/analysis?url=https%3A%2F%2Fjakoch.github.io%2Fphp-wasm-devbox%2Findex.html"
+             target="_blank" rel="noopener noreferrer">Test PageSpeed</a>
+         <a class="text-info mx-2" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjakoch.github.io%2Fphp-wasm-devbox%2Findex.html"
+            target="_blank" rel="noopener noreferrer">Test HTML</a>
+          <a class="text-info mx-2" href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjakoch.github.io%2Fphp-wasm-devbox%2Findex.html"
+             target="_blank" rel="noopener noreferrer">Test CSS</a>
         </div>
       </div>
     </div>
