fix monaco editor height issue, alter name and background style of "PHP Function Reference" panel

--- a/playground/index.html
+++ b/playground/index.html
@@ -290,11 +290,11 @@ echo 'Loaded Modules: ' . "\n - " . implode("\n - ", get_loaded_extensions()) . 
         <!-- Documentation Panel -->
 
         <div id="docs-panel" class="card bg-dark">
-          <div id="docs-panel-header" class="card-header bg-primary text-white d-flex justify-content-between align-items-center"
+          <div id="docs-panel-header" class="card-header bg-secondary text-white d-flex justify-content-between align-items-center"
             style="overflow: hidden; height: 60px;">
             <div class="d-flex align-items-center">
               <i class="bi bi-journal-text fs-3"></i>
-              <span class="ffw-bold fs-4 ps-2">Documentation for PHP functions</span>
+              <span class="ffw-bold fs-4 ps-2">PHP Function Reference</span>
             </div>
           </div>
           <div id="docs-panel-footer" class="card-body py-2 px-3">
