--- a/playground/index.html
+++ b/playground/index.html
@@ -18,13 +18,18 @@
   <meta name=”twitter:card” content="summary_large_image">
   <meta name=”twitter:creator” content="@jens-andre-koch">
   <meta name=”twitter:title” content="PHP-WASM Playground">
-  <meta name=”twitter:description”
+  <meta name=”twitter:description"
     content="PHP-WASM Playground is a simple in-browser editor for PHP using WebAssembly.">
-  <!--<meta name=”twitter:image” content="https://.../logo.png">-->
+  <!--<meta name=”twitter:image" content="https://.../logo.png">-->
   <link rel="shortcut icon" href="assets/favicon.ico">
+  <!-- Accessibility styles moved to assets/css/style.css -->
 </head>
 
 <body id="bootstrap-body-override">
+  <!-- Skip Links for Accessibility -->
+  <a href="#editor-container" class="visually-hidden-focusable">Skip to Editor</a>
+  <a href="#standard-output-card" class="visually-hidden-focusable">Skip to Output</a>
+
   <!-- NoScript Warning -->
   <noscript>
     <div class="alert alert-danger text-center" role="alert">
@@ -36,7 +41,8 @@
   <header class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top shadow border-bottom border-dark">
     <nav class="container-fluid bd-gutter flex-wrap flex-lg-nowrap ms-5">
       <a class="navbar-brand p-0 me-2 fs-4" href="/" aria-label="PHP-WASM Playground">
-        <i class="bi bi-filetype-php fs-3 me-2"></i>PHP-WASM Playground
+        <i class="bi bi-filetype-php fs-3 me-2" aria-hidden="true"></i><span class="visually-hidden">PHP logo</span>
+        <span class="fw-bold fs-3"><h1 class="d-inline m-0 p-0" style="font-size:inherit;">PHP-WASM Playground</h1></span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bdNavbar"
         aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,33 +53,30 @@
         <ul class="navbar-nav me-auto bd-navbar-nav pt-2 py-lg-0 ms-5">
           <li class="nav-item">
             <a id="playground-link" class="nav-link fs-4 d-flex align-items-center" href="#">
-              <i class="bi bi-pencil-square fs-3 me-2"></i>Editor
+              <i class="bi bi-pencil-square fs-3 me-2" aria-hidden="true"></i><span class="visually-hidden">Editor</span>Editor
             </a>
           </li>
           <li class="nav-item">
             <a id="help-link" class="nav-link fs-4 d-flex align-items-center" href="#">
-              <i class="bi bi-question-octagon fs-3 me-2"></i>Help
+              <i class="bi bi-question-octagon fs-3 me-2" aria-hidden="true"></i><span class="visually-hidden">Help</span>Help
             </a>
           </li>
         </ul>
         <!-- Right section -->
         <ul class="navbar-nav ms-auto bd-navbar-nav pt-2 py-lg-0 me-5">
           <li class="nav-item">
-            <a id="issues-link" class="nav-link fs-4 d-flex align-items-center"
-              href="https://github.com/jakoch/php-wasm-devbox/issues">
-              <i class="bi bi-github fs-3 me-2"></i>Report Issue
+            <a id="issues-link" class="nav-link fs-4 d-flex align-items-center" href="https://github.com/jakoch/php-wasm-devbox/issues">
+              <i class="bi bi-github fs-3 me-2" aria-hidden="true"></i><span class="visually-hidden">Report Issue</span>Report Issue
             </a>
           </li>
           <li class="nav-item">
-            <a id="star-github-link" class="nav-link fs-4 d-flex align-items-center"
-              href="https://github.com/jakoch/php-wasm-devbox">
-              <i class="bi bi-star fs-3 me-2"></i>Star on GitHub
+            <a id="star-github-link" class="nav-link fs-4 d-flex align-items-center" href="https://github.com/jakoch/php-wasm-devbox">
+              <i class="bi bi-star fs-3 me-2" aria-hidden="true"></i><span class="visually-hidden">Star on GitHub</span>Star on GitHub
             </a>
           </li>
           <li class="nav-item">
-            <a id="donate-github-link" class="nav-link fs-4 d-flex align-items-center"
-              href="https://github.com/sponsors/jakoch">
-              <i class="bi bi-currency-dollar fs-3 me-2"></i>Donate
+            <a id="donate-github-link" class="nav-link fs-4 d-flex align-items-center" href="https://github.com/sponsors/jakoch">
+              <i class="bi bi-currency-dollar fs-3 me-2" aria-hidden="true"></i><span class="visually-hidden">Donate</span>Donate
             </a>
           </li>
         </ul>
@@ -81,18 +84,18 @@
     </nav>
   </header>
 
-  <div id="main-container" class="m-4 p-4">
+  <div id="main-container" class="m-4 p-4" role="main" aria-label="PHP-WASM Playground Main Content">
 
     <!-- Help -->
-    <div id="help-container" class="card bg-dark h-100 border border-dark bg-dark d-none pb-4 mb-4 fs-4">
+    <div id="help-container" class="card bg-dark h-100 border border-dark bg-dark d-none pb-4 mb-4 fs-4" role="region" aria-label="Help Panel">
       <div id="help-header" class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
         <div class="d-flex align-items-center">
-          <i class="bi bi-question-octagon fs-4"></i>
-          <span class="fw-bold fs-4 ps-2">Help</span>
+          <i class="bi bi-question-octagon fs-4" aria-hidden="true"></i>
+          <span class="fw-bold fs-4 ps-2"><h2 class="d-inline m-0 p-0" style="font-size:inherit;">Help</h2></span>
         </div>
       </div>
       <div id="help-body" class="card-body text-white">
-        <h4>Welcome to the PHP-WASM Playground!</h4>
+        <h3>Welcome to the PHP-WASM Playground!</h3>
         <p>The PHP-WASM Playground is a simple in-browser editor using the PHP-WASM module. It is not a fully featured
           IDE.</p>
         <p>The PHP-WASM module is the PHP interpreter compiled to WebAssembly using Emscripten. It allows you to run PHP
@@ -164,13 +167,25 @@
           <div class="col-3 fw-bold">Performance Display</div>
           <div class="col-9">Shows how long it took to run your PHP code.</div>
         </div>
+        <h4><u>Keyboard Shortcuts & Accessibility</u></h4>
+        <ul>
+          <li><strong>Tab / Shift+Tab</strong>: Move focus between all interactive controls and panels</li>
+          <li><strong>Enter / Space</strong>: Activate focused button, toggle, or dropdown</li>
+          <li><strong>Ctrl + +</strong>: Increase editor font size</li>
+          <li><strong>Ctrl + -</strong>: Decrease editor font size</li>
+          <li><strong>Ctrl + S</strong>: Save editor content as a PHP file</li>
+          <li><strong>Ctrl + C</strong>: Copy editor content to clipboard</li>
+          <li><strong>Skip Links</strong>: Use Tab at the top of the page to jump directly to Editor or Output</li>
+          <li><strong>Screen Reader Support</strong>: Output and error panels announce updates automatically; all icons and controls have accessible labels</li>
+          <li><strong>All features</strong> are fully usable with keyboard and screen reader</li>
+        </ul>
       </div>
     </div> <!-- /#help-container -->
 
     <!-- Editor -->
-    <div id="editor-container" class="row">
+    <div id="editor-container" class="row" role="region" aria-label="Editor and Output Panels">
       <!-- Left Side (Editor) -->
-      <div id="left" class="col-6">
+      <div id="left" class="col-6" role="region" aria-label="Editor Panel">
         <div id="editor-wrapper" class="card bg-dark h-100">
 
           <!-- Row 1: Code Editor Controls -->
@@ -180,32 +195,32 @@
 
             <!-- Left: Panel Name = Code Editor -->
             <div class="d-flex align-items-center">
-              <i class="bi bi-filetype-php fs-3"></i>
-              <span class="fw-bold fs-4 ps-2">Code Editor</span>
+              <i class="bi bi-filetype-php fs-3" aria-hidden="true"></i><span class="visually-hidden">PHP logo</span>
+              <span class="fw-bold fs-4 ps-2"><h2 class="d-inline m-0 p-0" style="font-size:inherit;">Code Editor</h2></span>
             </div>
 
             <!-- Right: Controls -->
             <div class="d-flex flex-wrap gap-2 justify-content-md-end">
-              <button id="run-button" class="btn btn-success custom-btn-size" title="Run the PHP script">
-                <i class="bi bi-play-fill"></i>
+              <button id="run-button" class="btn btn-success custom-btn-size" title="Run the PHP script" tabindex="0">
+                <i class="bi bi-play-fill" aria-hidden="true"></i><span class="visually-hidden">Run</span>
                 <span class="ps-2">Run</span>
               </button>
 
               <div class="form-check form-switch text-white d-flex align-items-center">
-                <input class="form-check-input bg-secondary" type="checkbox" id="auto-run" title="Toggle Automatic Run">
+                <input class="form-check-input bg-secondary" type="checkbox" id="auto-run" title="Toggle Automatic Run" tabindex="0">
                 <label class="form-check-label ps-1" for="auto-run">Auto Run</label>
                 <span id="auto-run-interval" class="ms-3 small text-info" style="min-width: 90px;">Interval: 3s</span>
               </div>
 
               <select id="php-version-switcher" class="form-select form-select-sm" style="width: auto;"
-                title="Select PHP version">
+                title="Select PHP version" tabindex="0">
                 <!-- Placeholder option to avoid layout shift -->
                 <option value="" disabled selected>Select PHP Version</option>
                 <!-- Options are dynamically loaded -->
               </select>
 
               <select id="editor-switcher" class="form-select form-select-sm" style="width: auto;"
-                title="Select editor type">
+                title="Select editor type" tabindex="0">
                 <option value="" disabled>Select Editor</option>
                 <option value="monaco" selected>Monaco</option>
                 <option value="codemirror">CodeMirror</option>
@@ -220,32 +235,29 @@
               <div class="col-12 d-flex flex-wrap justify-content-end gap-2">
 
                 <select id="php-example-switcher" class="form-select form-select-sm" style="width: auto;"
-                  title="Select PHP example">
+                  title="Select PHP example" tabindex="0">
                   <!-- Placeholder option to avoid layout shift -->
                   <option value="" disabled selected>Select Example</option>
                   <!-- Options are dynamically loaded -->
                 </select>
 
-                <button id="load-file-button" class="btn btn-secondary" title="Load a file into the editor">
-                  <i class="bi bi-folder"></i>
+                <button id="load-file-button" class="btn btn-secondary" title="Load a file into the editor" tabindex="0">
+                  <i class="bi bi-folder" aria-hidden="true"></i><span class="visually-hidden">Load File</span>
                   <span class="ps-2">Load File</span>
                 </button>
 
-                <button id="save-button" class="btn btn-secondary custom-btn-size"
-                  title="Save the current code to file">
-                  <i class="bi bi-save"></i>
+                <button id="save-button" class="btn btn-secondary custom-btn-size" title="Save the current code to file" tabindex="0">
+                  <i class="bi bi-save" aria-hidden="true"></i><span class="visually-hidden">Save</span>
                   <span class="ps-2">Save</span>
                 </button>
 
-                <button id="copy-button" class="btn btn-secondary custom-btn-size"
-                  title="Copy the current code to clipboard">
-                  <i class="bi bi-clipboard"></i>
+                <button id="copy-button" class="btn btn-secondary custom-btn-size" title="Copy the current code to clipboard" tabindex="0">
+                  <i class="bi bi-clipboard" aria-hidden="true"></i><span class="visually-hidden">Copy</span>
                   <span class="ps-2">Copy</span>
                 </button>
 
-                <button id="reset-button" class="btn btn-danger custom-btn-size"
-                  title="Reset the editor to a basic example">
-                  <i class="bi bi-arrow-clockwise"></i>
+                <button id="reset-button" class="btn btn-danger custom-btn-size" title="Reset the editor to a basic example" tabindex="0">
+                  <i class="bi bi-arrow-clockwise" aria-hidden="true"></i><span class="visually-hidden">Reset</span>
                   <span class="ps-2">Reset</span>
                 </button>
 
@@ -254,9 +266,8 @@
           </div> <!-- /#editor-header-2 -->
 
           <div id="editor-body" class="card-body">
-
             <!-- Editor Textarea -->
-            <textarea id="editor" class="form-control" rows="15">
+            <textarea id="editor" class="form-control" rows="15" aria-label="PHP Code Editor" tabindex="0" aria-live="polite" aria-describedby="editor-statusbar">
 &lt;?php
 
 // This example shows how to get the PHP version and list all loaded PHP extensions.
@@ -273,12 +284,14 @@ echo 'Loaded Modules: ' . "\n - " . implode("\n - ", get_loaded_extensions()) . 
             <span id="statusbar-cursor">Ln: 1, Col: 1</span>
             <span id="statusbar-size">Size: 0 bytes</span>
             <span id="statusbar-fontsize" class="d-flex align-items-center ms-3">
-              <button id="font-decrease" class="btn btn-sm btn-outline-light px-2 py-0 me-1" title="Decrease font size"
-                style="font-size:1.1em;line-height:1;">A</button>
+              <button id="font-decrease" class="btn btn-sm btn-outline-light px-2 py-0 me-1" title="Decrease font size" tabindex="0">
+                <span class="visually-hidden">Decrease font size</span>A
+              </button>
               <span id="font-size-value" class="mx-1"
                 style="min-width:2.5em;display:inline-block;text-align:center;">14px</span>
-              <button id="font-increase" class="btn btn-sm btn-outline-light px-2 py-0 ms-1" title="Increase font size"
-                style="font-size:1.5em;line-height:1;">A</button>
+              <button id="font-increase" class="btn btn-sm btn-outline-light px-2 py-0 ms-1" title="Increase font size" tabindex="0">
+                <span class="visually-hidden">Increase font size</span>A
+              </button>
             </span>
           </div>
 
@@ -288,37 +301,34 @@ echo 'Loaded Modules: ' . "\n - " . implode("\n - ", get_loaded_extensions()) . 
         <div class="m-2">&nbsp;</div>
 
         <!-- Documentation Panel -->
-
-        <div id="docs-panel" class="card bg-dark">
+        <div id="docs-panel" class="card bg-dark" role="region" aria-label="Documentation Panel">
           <div id="docs-panel-header" class="card-header bg-secondary text-white d-flex justify-content-between align-items-center"
             style="overflow: hidden; height: 60px;">
             <div class="d-flex align-items-center">
-              <i class="bi bi-journal-text fs-3"></i>
-              <span class="ffw-bold fs-4 ps-2">PHP Function Reference</span>
+              <i class="bi bi-journal-text fs-3" aria-hidden="true"></i>
+              <span class="fw-bold fs-4 ps-2"><h2 class="d-inline m-0 p-0" style="font-size:inherit;">PHP Function Reference</h2></span>
             </div>
           </div>
           <div id="docs-panel-footer" class="card-body py-2 px-3">
             <span class="text-light">No PHP functions detected.</span>
           </div>
         </div>
-
       </div> <!-- /#left -->
 
       <!-- Right Side (Output) -->
-      <div id="right" class="col-6">
-
+      <div id="right" class="col-6" role="region" aria-label="Output and Error Panels">
         <div id="output-panels">
 
           <!-- Output Panel -->
-          <div id="standard-output-card" class="card bg-dark h-100" style="min-height: 220px;">
+          <div id="standard-output-card" class="card bg-dark h-100" style="min-height: 220px;" role="region" aria-label="Output Panel">
 
             <div id="standard-output-header"
               class="card-header bg-success text-white d-flex justify-content-between align-items-center"
               style="height: 60px;">
               <!-- Panel Name -->
               <div class="d-flex align-items-center">
-                <i class="bi bi-code-slash fs-3"></i>
-                <span class="fw-bold fs-4 p-2">Output</span>
+                <i class="bi bi-code-slash fs-3" aria-hidden="true"></i>
+                <span class="fw-bold fs-4 p-2"><h2 class="d-inline m-0 p-0" style="font-size:inherit;">Output</h2></span>
               </div>
               <!-- Toggle Output Type: raw text or HTML -->
               <div class="form-check form-switch text-white ms-3">
@@ -339,8 +349,8 @@ echo 'Loaded Modules: ' . "\n - " . implode("\n - ", get_loaded_extensions()) . 
                 </div>
               </div>
             </div>
-            <div id="standard-output-body" class="card-body">
-              <pre id="standard-output" class="p-2 border border-dark rounded pre-direct text-white">Ready!</pre>
+            <div id="standard-output-body" class="card-body" aria-live="polite">
+              <pre id="standard-output" class="p-2 border border-dark rounded pre-direct text-white" aria-label="Standard Output" tabindex="0">Ready!</pre>
             </div>
 
           </div> <!-- /#standard-output -->
@@ -349,7 +359,7 @@ echo 'Loaded Modules: ' . "\n - " . implode("\n - ", get_loaded_extensions()) . 
           <div class="m-2">&nbsp;</div>
 
           <!-- Errors Panel -->
-          <div id="standard-error-output-card" class="card bg-dark h-100" style="min-height: 220px;">
+          <div id="standard-error-output-card" class="card bg-dark h-100" style="min-height: 220px;" role="region" aria-label="Error Panel">
 
             <!-- Standard Error Output -->
             <div id="standard-error-output-header"
@@ -357,13 +367,12 @@ echo 'Loaded Modules: ' . "\n - " . implode("\n - ", get_loaded_extensions()) . 
               style="height: 60px;">
               <!-- Panel Name -->
               <div class="d-flex align-items-center">
-                <i class="bi bi-code-slash fs-3"></i>
-                <span class="fw-bold fs-4 p-2">Errors</span>
+                <i class="bi bi-code-slash fs-3" aria-hidden="true"></i>
+                <span class="fw-bold fs-4 p-2"><h2 class="d-inline m-0 p-0" style="font-size:inherit;">Errors</h2></span>
               </div>
             </div>
-            <div id="standard-error-output-body" class="card-body">
-              <pre id="standard-error-output"
-                class="p-2 border border-dark rounded pre-direct text-white">No Errors!</pre>
+            <div id="standard-error-output-body" class="card-body" aria-live="assertive">
+              <pre id="standard-error-output" class="p-2 border border-dark rounded pre-direct text-white" aria-label="Standard Error Output" tabindex="0">No Errors!</pre>
             </div>
 
           </div> <!-- /#standard-error-output -->
